--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -180,19 +180,19 @@ Representa los modulos y tiendas que se encuentran en Mall Plaza.
 | **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos** | **Unidad**       | **Derivada de** | **Descripción**                       |
 | ------------------ | -------------- | ----------- | ------------------- | ---------------- | --------------- | ------------------------------------- |
 | idEspacioComercial | CHAR (10)      | x(10)       | No nulo, único      | N/A              | N/A             | Código único asignado a cada espacio comercial.       |
-| Tipo de inmueble   | CHAR (10)      | x(10)       | TAB2                | N/A                   | N/A             | Clasificación del inmueble.                           |
+| Tipo de inmueble   | CHAR (10)      | x(10)       | TAB1                | N/A                   | N/A             | Clasificación del inmueble.                           |
 | Área               | DECIMAL(10,2)  | 9999999.99  | >0                  | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.               |
-| Estado             | CHAR (10)      | x(10)       | TAB3                | N/A                   | N/A             | Estado actual del espacio comercial.                  |
+| Estado             | CHAR (10)      | x(10)       | TAB2                | N/A                   | N/A             | Estado actual del espacio comercial.                  |
 | Tarifa             | DECIMAL (10,2) | 9999999.99  | >0               | N/A                   | N/A             | Indica el precio por metro cuadrado que se debera pagar por el alquiler del espacio comercial. |
 
-TAB2
+TAB1
 
 | CODIGO | DESCRIPCIÓN |
 | ------ | ----------- |
 | E1     | Tienda      |
 | E2     | Modulo      |
 
-TAB3
+TAB2
 
 | CODIGO | DESCRIPCIÓN      |
 | ------ | ---------------- |
@@ -200,11 +200,20 @@ TAB3
 | S2     | Disponible       |
 | S3     | En mantenimiento |
 
+## **Entidad Zonas**
+Entidad que representa las distintas áreas o secciones ubicadas dentro de un centro comercial
+
+|**Atributo** |**Naturaleza**| **Formato**  | **Valores Válidos**    | **Unidad** | **Derivada de** | **Descripción**                          |
+| ----------- | ------------ | ------------ | ---------------------- | ---------- | --------------- | ------------------------------------------------ |
+| nombre_zona | CHAR(100)    | x(100)      | No nulo, único          | N/A        | N/A             | Nombre de la zona que identifica su ubicación. |
+| piso        | INT          | 9           | 1-9, No nulo            | N/A        | N/A             | Número del piso donde se encuentra la zona.     |
+| referencia  | CHAR(256)    | x(256)      | No nulo                 | N/A        | N/A             | Descripción o referencia adicional de la zona.   |
+
 
 ## **Entidad Factura**  
 La entidad Factura representa los documentos emitidos por el sistema para cobrar los montos pendientes a los inquilinos. Cada factura detalla los términos del cobro, como el monto total, fecha de emisión y estado de la factura (si está pagada o pendiente).
 
-| **Atributo**      | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**               |
+| **Atributo**      | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción**               |
 | ----------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | ------------------------------------- |
 | idFactura         | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único de la factura.    |
 | Fecha_Emisión     | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha en la que se emitió la factura. |
@@ -247,7 +256,7 @@ La entidad Empleado representa a una persona que trabaja en una empresa, almacen
 | Fecha de Nacimiento      | DATE           | YYYY-MM-DD      | AAAA-MM-DD                        | Años       | N/A             | Fecha de nacimiento del empleado                           |
 | Género                   | VARCHAR(10)    | x(10)           | Masculino, Femenino, Otro         | N/A        | N/A             | Identidad de género del empleado                           |
 | Estado Civil             | VARCHAR(15)    | x(15)           | Soltero, Casado, Divorciado, etc. | N/A        | N/A             | Estado civil del empleado                                  |
-| Nacionalidad             | VARCHAR(50)    | x(50)           | TAB4                              | N/A        | N/A             | Nacionalidad del empleado                                  |
+| Nacionalidad             | VARCHAR(50)    | x(50)           | TAB1                              | N/A        | N/A             | Nacionalidad del empleado                                  |
 | Número de Identificación | VARCHAR(20)    | x(20)           | Según país (DNI, Pasaporte)       | N/A        | N/A             | Documento de identidad nacional o pasaporte                |
 | Dirección                | VARCHAR(255)   | x(255)          | Dirección válida                  | N/A        | N/A             | Domicilio actual del empleado                              |
 | Teléfono                 | VARCHAR(15)    | x(15)           | Número de teléfono válido         | N/A        | N/A             | Número de contacto telefónico                              |
@@ -255,7 +264,7 @@ La entidad Empleado representa a una persona que trabaja en una empresa, almacen
 | Cargo                    | VARCHAR(50)    | x(50)           | Cargo dentro de la empresa        | N/A        | N/A             | Título o posición que ocupa el empleado en la organización |
 | Fotografía               | BLOB           | Archivo binario | Archivo de imagen                 | N/A        | N/A             | Fotografía del empleado para el sistema                    |
 
-TAB4
+TAB1
 
 | CODIGO | DESCRIPCIÓN |
 | ------ | ----------- |
