--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -117,16 +117,17 @@ Factura: Documento que refleja la operacion realizada por el cobro del servicio 
     
     Precio_factura: Cantidad monetaria por el cual se realiza el cobro del recobro. Tipo de dato: float
 
-## Entidad Mantenimiento 
+## Entidad Programación Mantenimientos
 Representa la programación de mantenimientos, tanto preventivo como correctivo.
 
 | **Atributo**    | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                                  |
 | --------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | -------------------------------------------------------- |
-| idMantenimiento | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del mantenimiento                    |
+| cod_Mantenimiento | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del mantenimiento                    |
 | prioridad       | CHAR(10)       | XX          | TAB1                  | N/A        | N/A             | Prioridad que tiene el mantenimiento                     |
 | plazo           | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha máxima que se tiene para realizar el mantenimiento |
 | Descripción     | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene el mantenimiento                      |
-| empleado        | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Encargado de dirigir cierto mantenimiento                |
+| encargado        | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Encargado de dirigir cierto mantenimiento            |
+|Estado           | CHAR            | x(50)       | Pendiente, Hecho     | N/A         |  N/A             |  Estado en que se encuentra un mantenimiento programado| 
 
 
 TAB1
@@ -146,11 +147,11 @@ Representa el registro de incidencias y problemas que pueda haber en el centro c
 
 | **Atributo**   | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**               |
 | -------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | ------------------------------------- |
-| idIncidencia   | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único de la incidencia  |
+| cod_incidencia   | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único de la incidencia  |
 | fecha_Registro | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha que se realizó el registro      |
 | hora_Registro  | TIME           | HH: MM :SS  | Valida en tiempo      | horas      | N/A             | Hora que se realizó el registro       |
-| Descripción    | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene la incidencia      |
-| empleado       | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Supervisor que registró la incidencia |
+| descripción    | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene la incidencia      |
+| estado         | CHAR           | x(30)       | pendiente, programado | N7A        | N/A             | Estado de la incidencia registrada    |
 
 
 ## Entidad Registro Mantenimiento
@@ -158,21 +159,20 @@ Representa el registro de matenimiento realizados.
 
 | **Atributo**     | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                                   |
 | ---------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | --------------------------------------------------------- |
-| idRMantenimiento | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del registro de mantenimiento         |
-| fecha_Registro   | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha que se realizó el registro                          |
-| hora_Registro    | TIME           | HH: MM :SS  | Valida en tiempo      | horas      | N/A             | Hora que se realizó el registro                           |
+| cod_RMantenimiento | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del registro de mantenimiento         |
+| fecha_Realizada   | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha que se realizó el registro                          |
+| hora_inicio    | TIME           | HH: MM :SS  | Valida en tiempo      | horas      | N/A             | Hora que se realizó el mantenimiento                          |
+| hora_fin       | TIME           | HH: MM : SS | Valida en tiempo       | horas     | N/A              | Hora en que finalizó el mantenimiento |
 | Observaciones    | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que hubieron en el mantenimiento                 |
-| empleado         | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Supervisor que registró la finalización del mantenimiento |
+
 
 ## Entidad Instalación
 Representa las zonas y tiendas donde se va a realizar el mantenimiento.
 
 | **Atributo**         | **Naturaleza** | **Formato** | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                    |
 | -------------------- | -------------- | ----------- | -------------------- | ---------- | --------------- | ------------------------------------------ |
-| cod_instalación      | CHAR(10)       | x(10)       | No nulo, único       | N/A        | N/A             | Identificador único de la instalación      |
+| nombre_instal        | CHAR           | x(64)       | No nulo              | N/A        | N/A             | Nombre específico de la instalación        |
 | Tipo                 | CHAR(10)       | x(30)       | zona, tienda, módulo | N/A        | N/A             | Detalla el tipo de intalación              |
-| referencia_ubicación | CHAR           | x(64)       | No nulo              | N/A        | N/A             | Detalles de la ubicación de la instalación |
-| Nombre               | CHAR           | x(64)       | No nulo              | N/A        | N/A             | Nombre específico de la instalación        |
 
 ## Entidad Espacio comercial
 Representa los modulos y tiendas que se encuentran en Mall Plaza.
