--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -59,65 +59,50 @@ Contiene información clave sobre el acuerdo de arrendamiento, con atributos par
 | monto            | DECIMAL(10,2)  | 9999999.99  | No nulo                    | N/A        | N/A             | Monto acordado en el contrato.                |
 | fechaInicio      | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha de inicio del contrato.                 |
 | fechaVencimiento | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha de vencimiento del contrato.            |
-| estado           | VARCHAR(20)       | x(20)       | Activo, Expirado, Renovado | N/A        | N/A             | Estado actual del contrato.                   |
-| condición        | VARCHAR(100)      | x(100)      | Nulo permitido             | N/A        | N/A             | Condiciones especiales asociadas al contrato. |
+| estado           | VARCHAR(20)    | x(20)       | Activo, Expirado, Renovado | N/A        | N/A             | Estado actual del contrato.                   |
+| condición        | VARCHAR(100)   | x(100)      | Nulo permitido             | N/A        | N/A             | Condiciones especiales asociadas al contrato. |
 | porcentaje       | DECIMAL (2,2)  | 99.99       | No nulo                    | N/A        | N/A             | Porcentaje de las ventas que serviran para calular el monto final de la renta.  |
 
-Recobro: Solicitud especifica sobre un servicio extra que la empresa realice para el inquilino
+## Entidad Recobro
+Contiene información sobre la Solicitud especifica de un servicio extra que la empresa realice para el inquilino
 
-    Nombre_recobro: El nombre del recobro que se va a realizar. Tipo de dato: Caracter
-    
-    Descripcion_recobro: Detalles del recobro a realizar. Tipo de dato: Caracter
-    
-    ID_recobro: Codigo para identificar el recobro. Tipo de dato: Caracter
-    
-    ID_inquilino: Codigo para identificar al inquilino. Tipo de dato: Caracter
-    
-    Razon_recobro: Motivo por el cual se realiza el recobro. Tipo de dato: Caracter
-    
-    Categoria_recobro: Clasificacion en la cual entra el recobro. Tipo de dato: Caracter
-    
-    Estado_recobro: Estado en la que se encuentra el recobro. Tipo de dato: Caracter
-  
-Proyecto_recobro: Planificacion sobre la ejecucion de un recobro
+| **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                       |
+| ------------------ | -------------- | ----------- | -------------------------- | ---------- | --------------- | --------------------------------------------- |
+| Nombre_recobro     | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Nombre del recobro                            |
+| Descripcion_recobro| VARCHAR(50)    | x(50)       | No nulo                    | N/A        | N/A             | Detalles del recobro a realizar               |
+| ID_recobro         | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el recobro            |
+| idinquilino        | CHAR(10)       | x(10)       | No nulo                    | N/A        | N/A             | Identificador único del inquilino             |
+| Razon_recobro      | VARCHAR(30)    | x(30)       | no nulo                    | N/A        | N/A             | Motivo por el cual se realiza el recobro      |
+| Categoria_recobro  | VARCHAR(100)   | x(100)      | no nulo                    | N/A        | N/A             | Clasificacion en la cual entra el recobro     |
+| Estado_recobro     | VARCHAR(20)    | x(20)       | Enviado, Valorizando, Pendiente, Ejecutado, Completado| N/A        | N/A             | Estado en la que se encuentra el recobro      |
+ 
+## Entidad Proyecto de recobro 
+Planificacion sobre la ejecucion de un recobro
 
-    ID_proyecto: Codigo para identifcar el proyecto. Tipo de dato: Caracter
-    
-    Periodos: Tiempos de plazos para realizar las tareas encargadas para completar el proyecto. Tipo de dato: Fecha
-    
-    Actividades: Deberes a realizar necesarios para el proyecto. Tipo de dato: Caracter
-    
-    Cronograma: Ordenamiento sobre el tiempo de los periodos y las tareas del proyecto. Tipo de dato: Caracter
-    
-    Costos: Costos asociados sobre la ejecucion del proyecto. Tipo de dato: Float
-    
-    Estado_proyecto: Estado en el que se encuentra el proyecto. Tipo de dato: Caracter
-  
-Acuerdo_recobro: Acuerdo que es consecuencia de la negociacion entre el inquilino y la empresa para definir como proceder para realizar el recobro
+| **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                                                   |
+| ------------------ | -------------- | ----------- | -------------------------- | ---------- | --------------- | ------------------------------------------------------------------------- |
+| Nombre_proyecto    | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Nombre del proyecto                                                       |
+| ID_proyecto        | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el proyecto                                       |
+| Periodos           | VARCHAR(4)     | x(4)        | No nulo                    | dias       | N/A             | Tiempos  para realizar las tareas encargadas para completar el proyecto   |
+| Actividades        | VARCHAR(20)    | x(20)       | No nulo                    | N/A        | N/A             | Deberes a realizar necesarios para el proyecto                            |
+| Cronograma         | CHAR(10)       | x(10)       | no nulo,                   | N/A        | N/A             | codigo para identificar el cronograma                                     |
+| Costos             | Decimal(5,2)   | x99999.99   | no nulo                    | Sol        | N/A             | Costos asociados sobre la ejecucion del proyecto                          |
+| Estado_proyecto    | VARCHAR(15)    | x(15)       | Ejecutado, Supervision     | N/A        | N/A             | Estado en el que se encuentra el proyecto                                 |
 
-    ID_acuerdo: Codigo para identificar el acuerdo del recobro. Tipo de dato: Caracter
-    
-    Fecha_acuerdo: Fecha en la que se realiza el acuerdo. Tipo de dato: fecha
-    
-    ID_inquilino: Codigo para identificar al inquilino. Tipo de dato: Caracter
-    
-    Precio_acuerdo: Cantidad de dinero a cobrar por la ejecucion del proyecto. Tipo de dato: fecha
-    
-    Descripcion_acuerdo: Detalles sobre el acuerdo. Tipo de dato: Caracter
-  
-Factura: Documento que refleja la operacion realizada por el cobro del servicio extra
+  ## Entidad Acuerdo de recobro
+Acuerdo que es consecuencia de la negociacion entre el inquilino y la empresa para definir como proceder para realizar el recobro
 
-    ID_factura: Codigo para identificar la factura. Tipo de dato: Caracter
-    
-    ID_inquilino: Codigo para identificar al inquilino. Tipo de dato: Caracter
-    
-    Concepto_factura: Concepto por el cual se realiza la factura. Tipo de dato: Caracter
-    
-    Fecha_factura: Fecha en la cual se realiza la facturacion. Tipo de dato: fecha
-    
-    Precio_factura: Cantidad monetaria por el cual se realiza el cobro del recobro. Tipo de dato: float
+| **Atributo**        | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                                    |
+| ------------------- | -------------- | ----------- | -------------------------- | ---------- | --------------- | -----------------------------------------------------------|
+| Nombre_acuerdo      | VARCHAR(40)    | x(40)       | no nulo                    | N/A        | N/A             | nombre del acuerdo                                         |
+| ID_acuerdo          | VARCHAR(30)    | x(30)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el acuerdo del recobro             |
+| Fecha_acuerdo       | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | dias       | N/A             | Fecha en la que se realiza el acuerdo                      |
+| idinquilino         | CHAR(10)       | x(10)       | No nulo                    | N/A        | N/A             | Identificador único del inquilino                          |
+| Precio_acuerdo      | Decimal(5,2)   | x99999.99   | No nulo                    | Sol        | N/A             | Cantidad de dinero a cobrar por la ejecucion del proyecto  |
+| Descripcion_acuerdo | VARCHAR(40)    | x(40)       | no nulo                    | N/A        | N/A             | Detalles sobre el acuerdo                                  |
 
-## Entidad Programación Mantenimientos
+
+  ## Entidad Programación Mantenimientos
 Representa la programación de mantenimientos, tanto preventivo como correctivo.
 
 | **Atributo**    | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                                  |
