--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -211,11 +211,12 @@ La entidad Factura representa los documentos emitidos por el sistema para cobrar
 ## **Entidad Recordatorio**  
 La entidad Recordatorio almacena la información de los recordatorios de pago enviados a los inquilinos. Estos recordatorios pueden ser enviados antes o después de la fecha de vencimiento de una factura, para notificar sobre la necesidad de pago.
 
-| **Atributo**      | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                                                              |
-| ----------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | ------------------------------------------------------------------------------------ |
-| idRecordatorio    | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del recordatorio.                                                |
-| Fecha_Envio       | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha en la que se envió el recordatorio.                                            |
-| Tipo_Recordatorio | CHAR(10)       | x(10)       | "Previo", "Posterior" | N/A        | N/A             | Indica si el recordatorio fue enviado antes o después del vencimiento de la factura. |
+| **Atributo**       | **Naturaleza** | **Formato**  | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción**                                                              |
+| ------------------ | -------------- | -----------  | --------------------- | ---------- | --------------- | ------------------------------------------------------------------------------------ |
+| idRecordatorio     | CHAR(10)       | x(10)        | No nulo, único        | N/A        | N/A             | Identificador único del recordatorio.                                                |
+| Fecha_Envio        | DATE           | dd/mm/aaaa   | No nulo               | N/A        | N/A             | Fecha en la que se envió el recordatorio.                                            |
+| Tipo_Recordatorio  | CHAR(10)       | x(10)        | "Previo", "Posterior" | N/A        | N/A             | Indica si el recordatorio fue enviado antes o después del vencimiento de la factura. |
+| contenido          | TEXT           | N/A          | No nulo               | N/A        | N/A             | Mensaje o detalles específicos que se enviaron en el recordatorio.                   |
 
 ---
 
