--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -205,6 +205,7 @@ La entidad Factura representa los documentos emitidos por el sistema para cobrar
 | Monto_Total       | DECIMAL(10,2)  | 9999999.99  | No nulo, > 0          | Moneda     | N/A             | Monto total a pagar por la factura.   |
 | Estado            | CHAR(10)       | x(10)       | "Pendiente", "Pagado" | N/A        | N/A             | Estado actual de la factura.          |
 | Fecha_Vencimiento | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha límite para pagar la factura.   |
+| idInquilino      | CHAR(10)       | x(10)       | No nulo, único               | N/A        | N/A             | Identificador único del inquilino.               |
 
 ---
 
