--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -107,12 +107,12 @@ Representa la programación de mantenimientos, tanto preventivo como correctivo.
 
 | **Atributo**    | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                                  |
 | --------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | -------------------------------------------------------- |
-| cod_Mantenimiento | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del mantenimiento                    |
-| prioridad       | CHAR(10)       | XX          | TAB1                  | N/A        | N/A             | Prioridad que tiene el mantenimiento                     |
+| cod_Mantenimiento | CHAR(10)     | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del mantenimiento                    |
+| prioridad       | CHAR(2)        | XX          | TAB1                  | N/A        | N/A             | Prioridad que tiene el mantenimiento                     |
 | plazo           | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha máxima que se tiene para realizar el mantenimiento |
-| Descripción     | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene el mantenimiento                      |
-| encargado        | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Encargado de dirigir cierto mantenimiento            |
-|Estado           | CHAR            | x(50)       | Pendiente, Hecho     | N/A         |  N/A             |  Estado en que se encuentra un mantenimiento programado| 
+| Descripción     | VARCHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene el mantenimiento                      |
+| encargado       | VARCHAR           | x(64)       | No nulo               | N/A        | N/A             | Encargado de dirigir cierto mantenimiento            |
+|Estado           | VARCHAR           | x(30)       | (Pendiente, Hecho)     | N/A         |  N/A             |  Estado en que se encuentra un mantenimiento programado| 
 
 
 TAB1
@@ -132,11 +132,11 @@ Representa el registro de incidencias y problemas que pueda haber en el centro c
 
 | **Atributo**   | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**               |
 | -------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | ------------------------------------- |
-| cod_incidencia   | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único de la incidencia  |
+| cod_incidencia | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único de la incidencia  |
 | fecha_Registro | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha que se realizó el registro      |
 | hora_Registro  | TIME           | HH: MM :SS  | Valida en tiempo      | horas      | N/A             | Hora que se realizó el registro       |
-| descripción    | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene la incidencia      |
-| estado         | CHAR           | x(30)       | pendiente, programado | N7A        | N/A             | Estado de la incidencia registrada    |
+| descripción    | VARCHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene la incidencia      |
+| estado         | VARCHAR           | x(30)       | (pendiente, programado) | N7A        | N/A             | Estado de la incidencia registrada    |
 
 
 ## Entidad Registro Mantenimiento
@@ -148,7 +148,7 @@ Representa el registro de matenimiento realizados.
 | fecha_Realizada   | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha que se realizó el registro                          |
 | hora_inicio    | TIME           | HH: MM :SS  | Valida en tiempo      | horas      | N/A             | Hora que se realizó el mantenimiento                          |
 | hora_fin       | TIME           | HH: MM : SS | Valida en tiempo       | horas     | N/A              | Hora en que finalizó el mantenimiento |
-| Observaciones    | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que hubieron en el mantenimiento                 |
+| Observaciones    | VARCHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que hubieron en el mantenimiento                 |
 
 
 ## Entidad Instalación
@@ -156,8 +156,8 @@ Representa las zonas y tiendas donde se va a realizar el mantenimiento.
 
 | **Atributo**         | **Naturaleza** | **Formato** | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                    |
 | -------------------- | -------------- | ----------- | -------------------- | ---------- | --------------- | ------------------------------------------ |
-| nombre_instal        | CHAR           | x(64)       | No nulo              | N/A        | N/A             | Nombre específico de la instalación        |
-| Tipo                 | CHAR(10)       | x(30)       | zona, tienda, módulo | N/A        | N/A             | Detalla el tipo de intalación              |
+| nombre_instal        | CHAR           | x(30)       | No nulo              | N/A        | N/A             | Nombre específico de la instalación        |
+| Tipo                 | VARCHAR        | x(20)       | zona, tienda, módulo | N/A        | N/A             | Detalla el tipo de intalación              |
 
 ## Entidad Espacio comercial
 Representa los modulos y tiendas que se encuentran en Mall Plaza.
